--- a/index.html
+++ b/index.html
@@ -21,27 +21,70 @@
       <p>blah blah</p>
     </div>
 
-    <div id="main-text">
+    <div class="container-fluid" id="main-text">
+
       <div class="row" id="top">
-        <p>some text</p>
-        <p>some text</p>
+        <div class="col-md-6">
+          WELCOME TO WIKIPEDIA
+        </div>
+        <div class="col-md-6">
+          <ul>
+            <div class="col-md-4">
+              <li>some text</li>
+              <li>some text</li>
+              <li>some text</li>
+            </div>
+            <div class="col-md-4">
+              <li>some text</li>
+              <li>some text</li>
+              <li>some text</li>
+            </div>
+            <div class="col-md-4">
+              <li>some text</li>
+              <li>some text</li>
+              <li>some text</li>
+            </div>
+          </ul>
+        </div>
       </div>
       <div class="row" id="middle">
-        <div class="col-xs-6" id="left">
-          <p>some text</p>
-          <p>some text</p>
-          <p>some text</p>
-          <p>some text</p>
-          <p>some text</p>
-          <p>some text</p>
+        <div class="col-md-6">
+
+          <div id="left">
+            <h4 id="left-title">From Today's Featured Articles</h4>
+            <li>some text</li>
+            <li>some text</li>
+            <li>some text</li>
+            <li>some text</li>
+
+            <h4 id="left-title">Did you Know...</h4>
+            <li>some text</li>
+            <li>some text</li>
+            <li>some text</li>
+            <li>some text</li>
+            <li>some text</li>
+          </div>
+
         </div>
-        <div class="col-xs-6" id="right">
-          <p>some text</p>
-          <p>some text</p>
+        <div class="col-md-6" >
+
+          <div id="right">
+            <h4 id="right-title">From Today's Featured Articles</h4>
+            <li>some text</li>
+            <li>some text</li>
+            <li>some text</li>
+
+            <h4 id="right-title">Did you Know...</h4>
+            <li>some text</li>
+            <li>some text</li>
+            <li>some text</li>
+            <li>some text</li>
+          </div>
+
         </div>
       </div>
       <div class="row" id="bottom">
-
+        <p>some text</p>
       </div>
     </div>
 
