fill in page content

--- a/index.html
+++ b/index.html
@@ -25,24 +25,26 @@
 
       <div class="row" id="top">
         <div class="col-md-6">
-          WELCOME TO WIKIPEDIA
+          <h1>Welcome to Wikipedia</h1>
+          <p class="centered" >the free encyclopedia that anyone can edit.</p>
+          <p class="centered" >5,544,443 articles in English</p>
         </div>
         <div class="col-md-6">
-          <ul>
+          <ul class ="top-padding">
             <div class="col-md-4">
-              <li>some text</li>
-              <li>some text</li>
-              <li>some text</li>
+              <li>Arts</li>
+              <li>Biography</li>
+              <li>Geography</li>
             </div>
             <div class="col-md-4">
-              <li>some text</li>
-              <li>some text</li>
-              <li>some text</li>
+              <li>History</li>
+              <li>Mathematics</li>
+              <li>Science</li>
             </div>
             <div class="col-md-4">
-              <li>some text</li>
-              <li>some text</li>
-              <li>some text</li>
+              <li>Society</li>
+              <li>Technology</li>
+              <li>All portals</li>
             </div>
           </ul>
         </div>
@@ -52,17 +54,12 @@
 
           <div id="left">
             <h4 id="left-title">From Today's Featured Articles</h4>
-            <li>some text</li>
-            <li>some text</li>
-            <li>some text</li>
-            <li>some text</li>
+            <img class="float-right" src="images/bear.jpeg" alt="a bear">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris <a href=”#”>nisi</a> ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu <a href=”#”>fugiat</a> nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris <a href=”#”>nisi</a> ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu <a href=”#”>fugiat</a> nulla pariatur.</p>
 
             <h4 id="left-title">Did you Know...</h4>
-            <li>some text</li>
-            <li>some text</li>
-            <li>some text</li>
-            <li>some text</li>
-            <li>some text</li>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           </div>
 
         </div>
@@ -70,21 +67,18 @@
 
           <div id="right">
             <h4 id="right-title">From Today's Featured Articles</h4>
-            <li>some text</li>
-            <li>some text</li>
-            <li>some text</li>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
             <h4 id="right-title">Did you Know...</h4>
-            <li>some text</li>
-            <li>some text</li>
-            <li>some text</li>
-            <li>some text</li>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           </div>
 
         </div>
       </div>
       <div class="row" id="bottom">
-        <p>some text</p>
+        <h4 id="bottom-title">Today's Featured Picture</h4>
+        <img class="float-left" src="images/horse.jpeg" alt="a horse">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
     </div>
 
