--- a/index.html
+++ b/index.html
@@ -10,41 +10,55 @@
 
     <div id="side-panel">
       <img src="images/logo.png" alt="logo" id="logo">
-      <p>blah blah</p>
-      <p>blah blah</p>
-      <p>blah blah</p>
-      <p>blah blah</p>
-      <p>blah blah</p>
-      <p>blah blah</p>
-      <p>blah blah</p>
-      <p>blah blah</p>
-      <p>blah blah</p>
+      <p class="side-link"><a href="#">Main Page</a></p>
+      <p class="side-link"><a href="#">Contents</a></p>
+      <p class="side-link"><a href="#">Featured Content</a></p>
+      <p class="side-link"><a href="#">Current Events</a></p>
+      <p class="side-link"><a href="#">Random article</a></p>
+      <p class="side-link"><a href="#">Donate to Wikipedia</a></p>
+      <p class="side-link"><a href="#">Wikipedia store</a></p>
+
+      <p class="side-title"><u>Interaction</u></p>
+      <p class="side-link"><a href="#">Help</a></p>
+      <p class="side-link"><a href="#">About Wikipedia</a></p>
+      <p class="side-link"><a href="#">Community portal</a></p>
+      <p class="side-link"><a href="#">Recent changes</a></p>
+      <p class="side-link"><a href="#">Contact page</a></p>
+
+      <p class="side-title"><u>Tools</u></p>
+      <p class="side-link"><a href="#">What links here</a></p>
+      <p class="side-link"><a href="#">Related changes</a></p>
+      <p class="side-link"><a href="#">Upload file</a></p>
+      <p class="side-link"><a href="#">Special pages</a></p>
+      <p class="side-link"><a href="#">Permanant link</a></p>
+      <p class="side-link"><a href="#">Page information</a></p>
+      <p class="side-link"><a href="#">Wikidata item</a></p>
     </div>
 
     <div class="container-fluid" id="main-text">
 
       <div class="row" id="top">
         <div class="col-md-6">
-          <h1>Welcome to Wikipedia</h1>
+          <h1>Welcome to <a href="https://en.wikipedia.org/wiki/Wikipedia">Wikipedia</a></h1>
           <p class="centered" >the free encyclopedia that anyone can edit.</p>
           <p class="centered" >5,544,443 articles in English</p>
         </div>
         <div class="col-md-6">
           <ul class ="top-padding">
             <div class="col-md-4">
-              <li>Arts</li>
-              <li>Biography</li>
-              <li>Geography</li>
+              <li><a href="#">Arts</a></li>
+              <li><a href="#">Biography</a></li>
+              <li><a href="#">Geography</a></li>
             </div>
             <div class="col-md-4">
-              <li>History</li>
-              <li>Mathematics</li>
-              <li>Science</li>
+              <li><a href="#">History</a></li>
+              <li><a href="#">Mathematics</a></li>
+              <li><a href="#">Science</a></li>
             </div>
             <div class="col-md-4">
-              <li>Society</li>
-              <li>Technology</li>
-              <li>All portals</li>
+              <li><a href="#">Society</a></li>
+              <li><a href="#">Technology</a></li>
+              <li><a href="#">All portals</a></li>
             </div>
           </ul>
         </div>
@@ -66,10 +80,10 @@
         <div class="col-md-6" >
 
           <div id="right">
-            <h4 id="right-title">From Today's Featured Articles</h4>
+            <h4 id="right-title">In the news</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
-            <h4 id="right-title">Did you Know...</h4>
+            <h4 id="right-title">On this day...</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           </div>
 
